--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <h2>El trabajo que se presenta tiene su contexto y antecedentes en la construcción y digitalización de los acensores públicos de Ermua</h2>
-            <p class="lead">El gemelo digital del proyecto realizado por Tecnalia/IMH se puede visualizar a continuación: <a target="_blank" href="https://ermuaio.carrd.co/">Digital Twin Ermua</a></p>
+            <p class="lead">El gemelo digital del proyecto realizado por Tecnalia/IMH se puede visualizar a continuación: <a target="_blank" href="https://drive.google.com/drive/folders/1vbD_yfKUQfx7dW2EIIO3LptALOpQ7KTP?usp=sharing">Digital Twin Ermua</a></p>
           </div>
         </div>
       </div>
