--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Proyecto IMH Ascensores Ermua</title>
+    <title>Proyecto IMH Soluciones Integrales de Ingeniería</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-        <li class="sidebar-brand"><a href="https://ermuaio.carrd.co/">Gemelo Digital</a></li>
+        <li class="sidebar-brand"><a href="https://stinorland.com/en/">Proyecto plantas fotovoltaicas</a></li>
         <li><a href="#top">Inicio</a></li>
         <li><a href="#about">Contexto</a></li>
         <li><a href="#services">Tecnologías</a></li>
@@ -36,9 +36,9 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
       <div class="vert-text">
-        <h1>Proyecto Tecnologías Industriales</h1>
-        <h3><em>Proyecto realizado por el equipo formado por Luis, Xabi e Iñigo</em></h3>
-        <h3><em>para la asignatura Tecnologias Industriales, en el Master Digital Manufacturing de IMH.</em></h3>
+        <h1>Proyecto Máster IMH - Soluciones Integrales de Ingeniería</h1>
+        <h3><em>Proyecto realizado por Iñigo Zalaya Fernández</em></h3>
+        <h3><em>para la asignatura Soluciones Integrales de Ingeniería, en el Master Digital Manufacturing de IMH.</em></h3>
         <a href="#about" class="btn btn-default btn-lg">Descubre</a>
       </div>
     </div>
@@ -49,8 +49,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
-            <h2>El trabajo que se presenta tiene su contexto y antecedentes en la construcción y digitalización de los acensores públicos de Ermua</h2>
-            <p class="lead">El gemelo digital del proyecto realizado por Tecnalia/IMH se puede visualizar a continuación: <a target="_blank" href="https://drive.google.com/drive/folders/1vbD_yfKUQfx7dW2EIIO3LptALOpQ7KTP?usp=sharing">Digital Twin Ermua</a></p>
+            <h2>El trabajo que se presenta tiene su contexto y antecedentes en la construcción y digitalización de un SCADA para las plantas fotovoltaicas de STI Norland</h2>
+            <p class="lead">El proyecto realizado por la empresa se puede visualizar a continuación: <a target="_blank" href="https://www.linkedin.com/posts/datua-smart-digital_sti-norland-encara-su-transformaci%C3%B3n-digital-activity-6818472542412533760-_Kv5">Proyecto SCADA IoT</a></p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Implementaciones tecnológicas</h2>
+            <h2>Pasos a seguir para subir datos y realizar tu propio estudio de mantenimiento predictivo</h2>
             <hr>
           </div>
         </div>
@@ -70,15 +70,15 @@
           <div class="col-md-2 col-md-offset-2 text-center">
             <div class="service-item">
               <i class="service-icon fa fa-sun-o"></i>
-              <h4>Datos metereológicos</h4>
-              <p class="lead">Mediante la plataforma IoT Thingsboard se obtienen datos del tiempo en Ermua en tiempo real</p>
+              <h4><a target="_blank" href="https://github.com/InigoZalaya/Proyecto-IMH-Master-Digital-Manufacturing">Repositorio documentación GitHub</a></h4>
+              <p class="lead">Lectura y comprensión previa de las funcionalidades del proyecto</p>
             </div>
           </div>
           <div class="col-md-2 text-center">
             <div class="service-item">
               <i class="service-icon fa fa-building-o"></i>
-              <h4>Modelos 3D</h4>
-              <p class="lead">Visualización de los modelos 3D de ascensores y posibilidad de diseño</p>
+              <h4><a target="_blank" href="https://drive.google.com/drive/folders/1vbD_yfKUQfx7dW2EIIO3LptALOpQ7KTP?usp=sharing">Directorio donde subir los datasets</a></h4>
+              <p class="lead">Visualización de los modelos 3D de ascensores y posibilidad de diseño</p>          
             </div>
           </div>
           <div class="col-md-2 text-center">
