--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-              <a href="https://demo.thingsboard.io/dashboard/4e117c30-592a-11ec-8f43-1d800e6c37b6?publicId=e7504c00-5a9c-11ec-928c-d16ac1689d62"><img class="img-portfolio img-responsive" src="img/portfolio-1.jpg"></a>
-              <h4><a target="_blank" href="https://demo.thingsboard.io/dashboard/488534c0-5540-11ec-a53b-97baf75c7cfe?publicId=a8142020-553d-11ec-a53b-97baf75c7cfe">Thingsboard</a></h4>
+              <a><img class="img-portfolio img-responsive" src="img/portfolio-1.jpg"></a>
+              <h4><a target="_blank" href="https://demo.thingsboard.io/dashboard/4e2be200-592a-11ec-8f43-1d800e6c37b6?publicId=e7504c00-5a9c-11ec-928c-d16ac1689d62">Thingsboard</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-              <a href="https://sketchfab.com/models/3c6c595035044a028f6fc236cb8a6b1e/embed"><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
+              <a><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
               <h4><a target="_blank" href="https://sketchfab.com/models/96757037a5e540f0b047a1fdddce7e29/embed">Modelos 3D</a></h4>
             </div>
           </div>
@@ -134,13 +134,13 @@
         <div class="row">
           <div class="col-md-4 col-md-offset-2 text-center">
             <div class="portfolio-item">
-              <a href="https://studio.edgeimpulse.com/public/65423/latest"><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
+              <a><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
               <h4><a target="_blank" href="https://studio.edgeimpulse.com/public/65423/latest">Inteligencia Artificial</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-              <a href="https://public.tableau.com/views/AscensoresErmua/DIGITALTWINDELOSASCENSORESPUBLICOSDEERMUA?:language=es-ES&publish=yes&:display_count=n&:origin=viz_share_link:showVizHome=no"><img class="img-portfolio img-responsive" src="img/portfolio-4.jpg"></a>
+              <a><img class="img-portfolio img-responsive" src="img/portfolio-4.jpg"></a>
               <h4><a target="_blank" href="https://public.tableau.com/views/AscensoresErmua/DIGITALTWINDELOSASCENSORESPUBLICOSDEERMUA?:language=es-ES&publish=yes&:display_count=n&:origin=viz_share_link:showVizHome=no">Tableau</h4>
             </div>
           </div>
