--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-2 text-center">
             <div class="service-item">
               <i class="service-icon fa fa-tasks"></i>
-              <h4>Thingsboard</h4>
+              <h4><a target="_blank" href="https://demo.thingsboard.io/dashboard/4e2be200-592a-11ec-8f43-1d800e6c37b6?publicId=e7504c00-5a9c-11ec-928c-d16ac1689d62">Thingsboard</a></h4>
               <p class="lead">Herramienta para la gestión y visualización de los datos obtenidos</p>
             </div>
           </div>
