--- a/index.html
+++ b/index.html
@@ -126,24 +126,14 @@
           </div>
           <div class="col-md-4 text-center">
             <div class="portfolio-item">
-              <a><img class="img-portfolio img-responsive" src="img/portfolio-2.jpg"></a>
-              <h4><a target="_blank" href="https://sketchfab.com/models/96757037a5e540f0b047a1fdddce7e29/embed">Modelos 3D</a></h4>
+              <a><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
+              <h4><a target="_blank" href="https://github.com/InigoZalaya/Proyecto-IMH-Master-Digital-Manufacturing">Inteligencia Artificial</a></h4>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-md-offset-2 text-center">
-            <div class="portfolio-item">
-              <a><img class="img-portfolio img-responsive" src="img/portfolio-3.jpg"></a>
-              <h4><a target="_blank" href="https://studio.edgeimpulse.com/public/65423/latest">Inteligencia Artificial</a></h4>
-            </div>
-          </div>
-          <div class="col-md-4 text-center">
-            <div class="portfolio-item">
-              <a><img class="img-portfolio img-responsive" src="img/portfolio-4.jpg"></a>
-              <h4><a target="_blank" href="https://public.tableau.com/views/AscensoresErmua/DIGITALTWINDELOSASCENSORESPUBLICOSDEERMUA?:language=es-ES&publish=yes&:display_count=n&:origin=viz_share_link:showVizHome=no">Tableau</h4>
-            </div>
-          </div>
+          
+         
         </div>
       </div>
     </div>
